Added logout action
